; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/vsp1/extr_vsp1_dl.c_vsp1_dl_list_add_chain.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/vsp1/extr_vsp1_dl.c_vsp1_dl_list_add_chain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vsp1_dl_list = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vsp1_dl_list_add_chain(%struct.vsp1_dl_list* %0, %struct.vsp1_dl_list* %1) #0 {
  %3 = alloca %struct.vsp1_dl_list*, align 8
  %4 = alloca %struct.vsp1_dl_list*, align 8
  store %struct.vsp1_dl_list* %0, %struct.vsp1_dl_list** %3, align 8
  store %struct.vsp1_dl_list* %1, %struct.vsp1_dl_list** %4, align 8
  %5 = load %struct.vsp1_dl_list*, %struct.vsp1_dl_list** %3, align 8
  %6 = getelementptr inbounds %struct.vsp1_dl_list, %struct.vsp1_dl_list* %5, i32 0, i32 0
  store i32 1, i32* %6, align 4
  %7 = load %struct.vsp1_dl_list*, %struct.vsp1_dl_list** %4, align 8
  %8 = getelementptr inbounds %struct.vsp1_dl_list, %struct.vsp1_dl_list* %7, i32 0, i32 1
  %9 = load %struct.vsp1_dl_list*, %struct.vsp1_dl_list** %3, align 8
  %10 = getelementptr inbounds %struct.vsp1_dl_list, %struct.vsp1_dl_list* %9, i32 0, i32 1
  %11 = call i32 @list_add_tail(i32* %8, i32* %10)
  ret i32 0
}

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
